<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.nzbhydra</groupId>
    <artifactId>other</artifactId>
    <version>3.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>h2legacy</module>
        <module>mockserver</module>
        <module>sockslib</module>
        <module>github-release-plugin</module>
        <module>discord-releaser</module>
    </modules>

    <properties>

        <maven.compiler.release>17</maven.compiler.release>
        <lombok.version>1.18.42</lombok.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
